[package]
name = "lumos"
version = "0.1.0"
authors = ["Shane Snover <ssnover95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helles = { git = "https://github.com/ssnover/helles" }
borealis = { path = "../borealis" }
ctrlc = "3.1"
tokio = { version = "0.2", features=["rt-core", "stream"]}
serde = "1.0"
serde_json = "1.0"
lighthouse = { git = "https://github.com/finnkauski/lighthouse", branch="main" }